--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@
     --popover-foreground: 0 0% 3.9%;
     --primary: 75.72 76.95% 47.65%;
     --primary-foreground: 75.72 76.95% 20%;
-    --secondary: 0 0% 96.1%;
+    --secondary: 75.33, 73.77%, 23.92%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
@@ -76,4 +76,10 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 16px;
 }
